Made changes to the files

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-
 </head>
 <body>
 
@@ -61,7 +59,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-      Coded by <a href="">Kilaso Olabode</a>
+      Coded by <a href="https://www.frontendmentor.io/profile/Great-kiola">Kilaso Olabode</a>
     </p>
   </footer>
 </body>
