Made changes to the html and css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 <body>
 
-  Try It Free
+  <main class="container">
+    <header>
+      <img src="./images/logo.svg" alt="Huddle logo">
+  
+      <button class="btn">Try It Free</button>
+    </header>
+
+
+    
+  
+  </main>
+
+
+  
 
   Build The Community Your Fans Will Love
 
