--- a/index.html
+++ b/index.html
@@ -2,74 +2,63 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
 
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+  <title>
+    Frontend Mentor | Huddle landing page with alternating feature blocks
+  </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
-
 </head>
 
 <body>
-
   <main class="container">
-
-    <!-- FlowBite components -->
-    <!-- Header -->
-
-    <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 mt-20">
-
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="#" class="flex items-center">
-          <img src="./images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" />
-        </a>
-
-        <div class="w-full md:block md:w-auto">
-
-          <ul
-            class="font-bold md:p-0 mt-4">
-            <li>
-              <a href="#"
-                class="p-3.5 bg-indigo-500 text-slate-50 rounded " aria-current="page">Home</a>
-            </li>
-          </ul>
-
-        </div>
-      </div>
-    </nav>
-    
-
     <header>
+      <!-- FlowBite components -->
+      <!-- Header -->
+      <nav>
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+          <a href="#" class="flex items-center">
+            <img src="./images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" />
+          </a>
+
+          <div class="w-full md:block md:w-auto">
+            <ul class="font-bold md:p-0 mt-4">
+              <li>
+                <a href="#" class="p-3.5 bg-indigo-500 text-slate-50 rounded" aria-current="page">Home</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <div class="headText">
         <div class="firstDiv">
           <h1>Build The Community Your Fans Will Love</h1>
-          <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-            Create connections with your users as you engage in genuine discussion.
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as
+            you engage in genuine discussion.
           </p>
           <button>Get Started For Free</button>
         </div>
         <div class="secondDiv">
-          <img src="./images/illustration-mockups.svg" alt="">
+          <img src="./images/illustration-mockups.svg" alt="" />
         </div>
-
       </div>
     </header>
-
-    <section></section>
-
-
   </main>
-
-
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-      Coded by <a href="https://www.frontendmentor.io/profile/Great-kiola">Kilaso Olabode</a>
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      Coded by
+      <a href="https://www.frontendmentor.io/profile/Great-kiola">Kilaso Olabode</a>
     </p>
   </footer>
 
