--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <main class="container">
     <header>
+
       <!-- FlowBite components -->
       <!-- Header -->
       <nav>
@@ -51,19 +52,22 @@
         </div>
       </div>
     </header>
+
+    
   </main>
 
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
       Coded by
       <a href="https://www.frontendmentor.io/profile/Great-kiola">Kilaso Olabode</a>
     </p>
-  </footer>
+  </footer> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  
 </body>
 
 </html>
