Made changes to the html and css file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
   <main class="container">
-    <header>
+    <header
+      style="background-image: url(./images/bg-hero-desktop.svg);" class="bg-cover bg-no-repeat flex flex-col p-150 bg-[hsl(193, 100%, 96%)]">
 
       <!-- FlowBite components -->
       <!-- Header -->
